tests/error/verifySignature10.uplc
(program 0.0.0 [[[(builtin verifySignature)
	(con bytestring #c1a49c66e617f9ef5ec66bc4c6564ca33de2a5fb5e1464062e6d6c6219155efd)]
	(con bytestring #)]
	(con string "hello")])
